--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,6 +1,223 @@
+@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;500&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   list-style: none;
+  outline: none;
+  font-family: 'Space Grotesk', sans-serif;
+}
+
+.main {
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 25% 75%;
+  position: relative;
+  transition: all .8s;
+}
+
+@media (max-width: 1440px) {
+  .main {
+    display: flex;
+    flex-direction: column;
+    transition: 1s;
+  }
+}
+
+.main .primeira-secao {
+  width: 100%;
+  height: 100%;
+  background-image: url(./../assets/images/bg-main-desktop.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top;
+}
+
+@media (max-width: 1440px) {
+  .main .primeira-secao {
+    height: 30%;
+    min-height: 350px;
+    background-image: url(./../assets/images/bg-main-mobile.png);
+  }
+}
+
+.main .segunda-secao {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media (max-width: 1440px) {
+  .main .segunda-secao {
+    align-items: flex-start;
+    margin-top: 100px;
+  }
+}
+
+.main .segunda-secao .formulario {
+  width: 500px;
+  height: 500px;
+  padding: 20px;
+  font-size: 18px;
+  transition: all 1s;
+}
+
+@media (max-width: 900px) {
+  .main .segunda-secao .formulario {
+    padding: 40px;
+    width: 100%;
+  }
+}
+
+.main .segunda-secao .formulario label {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-bottom: 30px;
+}
+
+.main .segunda-secao .formulario .wrapper-input {
+  display: flex;
+  gap: 20px;
+}
+
+.main .segunda-secao .formulario .wrapper-input div {
+  display: flex;
+  gap: 20px;
+}
+
+.main .segunda-secao .formulario .texto {
+  font-size: 18px;
+  text-transform: uppercase;
+}
+
+.main .segunda-secao .formulario .input {
+  width: 100%;
+  height: 50px;
+  border: 1px solid #8e8593;
+  border-radius: 10px;
+  padding: 10px;
+  font-size: 18px;
+  color: #8e8593;
+}
+
+.main .segunda-secao .formulario .input:focus, .main .segunda-secao .formulario .input:active {
+  border: 1px solid #600594;
+}
+
+.main .segunda-secao .formulario .input.erro {
+  border-color: #ff5252;
+}
+
+.main .segunda-secao .formulario .erro {
+  color: #ff5252;
+  display: none;
+}
+
+.main .segunda-secao .formulario .erro.active {
+  display: block;
+}
+
+.main .segunda-secao .formulario .btn {
+  width: 100%;
+  height: 50px;
+  background-color: #21092f;
+  border: none;
+  border-radius: 10px;
+  color: white;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.main .segunda-secao .formulario .btn:hover {
+  background-color: #8e8593;
+}
+
+.main .modal {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  border: solid 2px red;
+}
+
+.main .modal .cartao {
+  width: 447px;
+  height: 245px;
+  color: white;
+  font-weight: 300;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+.main .modal .cartao-frente {
+  background-image: url(./../assets/images/bg-card-front.png);
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 20%;
+  left: 10%;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  transition: all 1s;
+}
+
+@media (max-width: 1440px) {
+  .main .modal .cartao-frente {
+    left: 25%;
+  }
+}
+
+@media (max-width: 900px) {
+  .main .modal .cartao-frente {
+    left: 30px;
+  }
+}
+
+.main .modal .cartao-frente .logo {
+  width: 80px;
+}
+
+.main .modal .cartao-frente .dados-cartao {
+  text-align: center;
+}
+
+.main .modal .cartao-frente .dados-cartao .numero-cartao {
+  font-size: 1.9rem;
+}
+
+.main .modal .cartao-frente .dados-cartao div {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.main .modal .cartao-verso {
+  background-image: url(./../assets/images/bg-card-back.png);
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 49%;
+  left: 15%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 60px;
+  transition: all 1s;
+}
+
+@media (max-width: 1440px) {
+  .main .modal .cartao-verso {
+    top: 40px;
+    left: 50%;
+  }
+}
+
+@media (max-width: 900px) {
+  .main .modal .cartao-verso {
+    left: auto;
+    right: 30px;
+  }
 }
