--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -2,10 +2,15 @@
 @import 'cores';
 @import 'mobile';
 
+// Fonte externa
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;500&display=swap');
+
 // Reset
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     list-style: none;
+    outline: none;
+    font-family: 'Space Grotesk', sans-serif;
 }
