--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -28,6 +28,10 @@
             min-height: 350px;
             background-image: url(./../assets/images/bg-main-mobile.png);
         }
+
+        @include mobile {
+            min-height: 250px;
+        }
     }
 
     .segunda-secao {
@@ -126,7 +130,6 @@
         width: 100%;
         height: 100%;
         position: absolute;
-        border: solid 2px red;
 
         .cartao {
             width: 447px;
@@ -135,12 +138,19 @@
             font-weight: 300;
             text-transform: uppercase;
             letter-spacing: 2px;
+            background-size: contain;
+            background-repeat: no-repeat;
+            position: absolute;
+
+            @include mobile {
+                width: 327px;
+                height: 200px;
+            }
         }
 
         .cartao-frente {
             background-image: url(./../assets/images/bg-card-front.png);
-            background-repeat: no-repeat;
-            position: absolute;
+            
             top: 20%;
             left: 10%;
             padding: 30px;
@@ -165,9 +175,12 @@
                 
                 text-align: center;
                 
-
                 .numero-cartao {
                     font-size: 1.9rem;
+
+                    @include mobile {
+                        font-size: 20px;
+                    }
                     
                 }
 
@@ -182,8 +195,6 @@
 
         .cartao-verso {
             background-image: url(./../assets/images/bg-card-back.png);
-            background-repeat: no-repeat;
-            position: absolute;
             top: 49%;
             left: 15%;
             display: flex;
@@ -201,6 +212,13 @@
                 left: auto;
                 right: 30px;
 
+            }
+
+            .seguranca-cartao {
+                @include mobile {
+                    position: absolute;
+                    top: 78px;
+                }
             }
         }
     }
