--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -40,9 +40,14 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        transition: all 1s;
 
         @include tablet {
             align-items: flex-start;
+            margin-top: 150px;
+        }
+
+        @include mobile {
             margin-top: 100px;
         }
 
@@ -51,6 +56,7 @@
             height: 500px;
             padding: 20px;
             font-size: 18px;
+            z-index: 10;
             transition: all 1s;
 
             @include mobile {
@@ -63,15 +69,20 @@
                 flex-direction: column;
                 gap: 10px;
                 margin-bottom: 30px;
-
             }
             
             .wrapper-input {
                 display: flex;
                 gap: 20px;
+                
                 div {
-                    display: flex;
-                    gap: 20px;
+                    display: grid;
+                    grid-template-columns: repeat(2, 1fr);
+                    gap: 10px;
+
+                    span {
+                        grid-column: 1 / 3;
+                    }
                 }
             }
 
@@ -95,8 +106,23 @@
                     border: 1px solid $gradiente2;
                 }
 
-                &.erro {
+                &.alerta {
                     border-color: $vermelho;
+
+                    & + .erro {
+                        display: block;
+                    }
+                }
+
+                // Chorome e outros
+                &::-webkit-outer-spin-button, &::-webkit-inner-spin-button {
+                    -webkit-appearance: none;
+                    margin: 0;
+                }
+
+                // Firefox
+                &[type=number] {
+                    -moz-appearance: textfield;
                 }
             }
 
@@ -130,6 +156,7 @@
         width: 100%;
         height: 100%;
         position: absolute;
+        z-index: 9;
 
         .cartao {
             width: 447px;
@@ -160,7 +187,7 @@
             transition: all 1s;
 
             @include tablet {
-                left:  25%;
+                left:  20%;
             }
 
             @include mobile {
@@ -205,7 +232,8 @@
 
             @include tablet {
                 top: 40px;
-                left: 50%;
+                left: auto;
+                right: 20%;
             }
             
             @include mobile {
