--- a/css/estilo.css
+++ b/css/estilo.css
@@ -14,14 +14,12 @@
   display: grid;
   grid-template-columns: 25% 75%;
   position: relative;
-  transition: all .8s;
 }
 
 @media (max-width: 1440px) {
   .main {
     display: flex;
     flex-direction: column;
-    transition: 1s;
   }
 }
 
@@ -54,7 +52,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: all 1s;
 }
 
 @media (max-width: 1440px) {
@@ -71,12 +68,17 @@
 }
 
 .main .segunda-secao .formulario {
-  width: 500px;
+  width: 400px;
   height: 500px;
   padding: 20px;
   font-size: 18px;
   z-index: 10;
-  transition: all 1s;
+  display: none;
+  flex-direction: column;
+}
+
+.main .segunda-secao .formulario.active {
+  display: flex;
 }
 
 @media (max-width: 700px) {
@@ -90,7 +92,7 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 
 .main .segunda-secao .formulario .wrapper-input {
@@ -133,6 +135,7 @@
 
 .main .segunda-secao .formulario .input.alerta + .erro {
   display: block;
+  font-size: 12px;
 }
 
 .main .segunda-secao .formulario .input::-webkit-outer-spin-button, .main .segunda-secao .formulario .input::-webkit-inner-spin-button {
@@ -153,18 +156,60 @@
   display: block;
 }
 
-.main .segunda-secao .formulario .btn {
+.main .segunda-secao .concluido {
+  z-index: 10;
+  display: none;
+  width: 400px;
+  padding: 20px;
+  flex-direction: column;
+  gap: 15px;
+  justify-content: center;
+  align-items: center;
+}
+
+.main .segunda-secao .concluido.active {
+  display: flex;
+}
+
+.main .segunda-secao .concluido .circulo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  background-image: -moz-linear-gradient(#6448fe, #600594);
+  margin-bottom: 20px;
+}
+
+.main .segunda-secao .concluido .circulo i {
+  display: inline-block;
+  font-size: 30px;
+  color: white;
+}
+
+.main .segunda-secao .concluido .titulo {
+  text-transform: uppercase;
+  letter-spacing: 3px;
+}
+
+.main .segunda-secao .concluido .texto {
+  color: #8e8593;
+}
+
+.main .segunda-secao .btn {
   width: 100%;
   height: 50px;
+  margin-top: 20px;
   background-color: #21092f;
   border: none;
-  border-radius: 10px;
+  border-radius: 8px;
   color: white;
   font-size: 18px;
   cursor: pointer;
 }
 
-.main .segunda-secao .formulario .btn:hover {
+.main .segunda-secao .btn:hover {
   background-color: #8e8593;
 }
 
@@ -249,7 +294,6 @@
   justify-content: flex-end;
   align-items: center;
   padding: 60px;
-  transition: all 1s;
 }
 
 @media (max-width: 1440px) {
